# object-detection-models-quantization

./: .gitignore  README.md
Post_Training_Quantization/ONNX/: ptq_using_onnx.ipynb
Post_Training_Quantization/PyTorch/: base.py  main.py  pyproject.toml  utils.py  yolo.py
Post_Training_Quantization/PyTorch/Data/: README.md
Post_Training_Quantization/PyTorch/models/: __init__.py  base.py  utils.py  yolo.py
Post_Training_Quantization/VitisAI/: run_compression.sh  run_yolo_conversion.sh  vai_q_yolo.py  yolo_converter.py
Post_Training_Quantization/VitisAI/data/: README.md
